# protoc-gen-elm

./: .gitignore  .npmignore  .travis.yml  CHANGELOG.md  README.md  build.sh  build_debug.sh  debug.js  elm.json  generate_test_protos.sh  index.js  jest.config.js  package-lock.json  package.json  test.sh  tsconfig.json  upgrade.sh
.github/workflows/: build_and_test.yml  publish.yml
example/: elm.json  greeter.proto  server.js
example/grpc/: README.md  elm.json  envoy.yaml  greeter.proto  package-lock.json  package.json  server.js
example/http/: elm.json  server.js
example/src/: Main.elm
example/tonic_vite/: .gitignore  Cargo.toml  README.md  build.rs  elm.json  index.html  package-lock.json  package.json  todos.proto  vite.config.js
example/tonic_vite/src/: Main.elm  Ports.elm  main.css  main.rs
src/: DebugMain.elm  Errors.elm  Generator.elm  GeneratorNew.elm  Main.elm  Mapper.elm  MapperNew.elm  Model.elm  Options.elm  Ports.elm  Versions.elm
src/DevTools/: monkeypatch.js
src/Generator/: Common.elm  Declarations.elm  DevToolsWorker.elm  Enum.elm  Export.elm  Import.elm  Internals.elm  Message.elm  OneOf.elm  Service.elm
src/Google/: Protobuf.elm
src/Mapper/: Name.elm  Package.elm  Struct.elm  (+1 more)
test-utils/: ByteUtil.elm
tests/: MapperTest.elm  basic_message.test.ts  compatability.test.ts  elm_protoc_plugin.test.ts  import.test.ts  multiple_oneof.test.ts  oneof.test.ts  package.test.ts  repl.ts  roundtrip.ts  setup_tests.ts  single_enum.test.ts  snapshot_test_base.ts  snapshots.test.js  subdir.test.ts  subdir_package.test.ts  test.proto  util.ts
(+107 files in other folders)
