[package]
name = "tonic_vite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.25.0", features = ["full"] }
tonic = "0.9.1"
tonic-web = "0.9.1"

[build-dependencies]
tonic-build = "0.9.1"
